Cambie los colores

--- a/index.html
+++ b/index.html
@@ -6,13 +6,20 @@
 	<meta name="Catalogo" description="Papaleria, oficina y mas">
 	<meta name="viewport" content="user-scalable=no, width=device-width, initial-scale=1, minimun-scale=0, maximun-scale=1">
 	<link rel="stylesheet" type="text/css" href="css/main.css">
+	<link rel="preconnect" href="https://fonts.googleapis.com">
+<link rel="preconnect" href="https://fonts.gstatic.com" crossorigin>
+<link href="https://fonts.googleapis.com/css2?family=Advent+Pro:wght@200&display=swap" rel="stylesheet">
 </head>
 <body>
-	
+	<div class="video-wrapper">
+		<video autoplay class="video">
+			<source src="video.mp4">
+		</video>
+	</div>
 	<main class="container" id="MCSection">
 		<div class="container_Info" id="CI_Section">
 			<span class="container_Info_Box">
-				<h1 class="container_info_box_tititle">Catalogo <br>Libreria</h1>
+				<h1 class="container_info_box_tititle">Catalogo Libreria</h1>
 				<h5 class="container_info_box_Description">Haz tus <br>Consultas a nuestro <br><a href="" class="container_info_box_Description_link">WhattsApp</a></h5>
 			</span>
 		</div>	
