Aca cambie los colores y trabaje en la parte RESPONSIVA

--- a/index.html
+++ b/index.html
@@ -11,11 +11,6 @@
 <link href="https://fonts.googleapis.com/css2?family=Advent+Pro:wght@200&display=swap" rel="stylesheet">
 </head>
 <body>
-	<div class="video-wrapper">
-		<video autoplay class="video">
-			<source src="video.mp4">
-		</video>
-	</div>
 	<main class="container" id="MCSection">
 		<div class="container_Info" id="CI_Section">
 			<span class="container_Info_Box">
@@ -29,9 +24,10 @@
 
 
 
+
 		<div class="container_ShowCategories">
-				<a href="" class="container_ShowCategories_Bttn">Productos</a>
-				<span class="container_ShowCategories_Bttn-M">O elegir por</span>
+				<a href="" class="container_ShowCategories_Bttn">Ver productos</a>
+				<span class="container_ShowCategories_Bttn-M">O elige por</span>
 				<span class="container_ShowCategories_Bttn" onclick="ShowCat()">Categorias</span>
 		</div>
 	</main>
