Trabajando en las categorias

--- a/index.html
+++ b/index.html
@@ -15,7 +15,7 @@
 		<div class="container_Info" id="CI_Section">
 			<span class="container_Info_Box">
 				<h1 class="container_info_box_tititle">Catalogo Libreria</h1>
-				<h5 class="container_info_box_Description">Haz tus <br>Consultas a nuestro <br><a href="" class="container_info_box_Description_link">WhattsApp</a></h5>
+				<h5 class="container_info_box_Description">Haz tus <br>Consultas a nuestro <br><a href="https://api.whatsapp.com/send?phone=50371481315&text=Hola!%20quisiera%20consultar%20sobre%20un!%20producto" class="container_info_box_Description_link">WhattsApp</a></h5>
 			</span>
 		</div>	
 
@@ -28,7 +28,7 @@
 		<div class="container_ShowCategories">
 				<a href="" class="container_ShowCategories_Bttn">Ver productos</a>
 				<span class="container_ShowCategories_Bttn-M">O elige por</span>
-				<span class="container_ShowCategories_Bttn" onclick="ShowCat()">Categorias</span>
+				<div class="container_ShowCategories_Bttn" id="Showbttn">Categorias</div>
 		</div>
 	</main>
 
@@ -40,40 +40,37 @@
 
 			<span class="container_Categories_display_content">
 				<img src="img/optimized/papeleria.png" alt="Categorias" class="container_Categories_display_Content_IO">
-				<a href="" class="container_Categories_display_Content_IO_Titles">Papeleria</a>
+				<a href="pages categories/html/papeleria.html" class="container_Categories_display_Content_IO_Titles">Papeleria</a>
 			</span>
 
 			<span class="container_Categories_display_content">
 				<img src="img/optimized/escolar.png" alt="Categorias" class="container_Categories_display_Content_IO">
-				<a href="" class="container_Categories_display_Content_IO_Titles">Escolar</a>
+				<a href="pages categories/html/papeleria.html" class="container_Categories_display_Content_IO_Titles">Escolar</a>
 			</span>
 
 			<span class="container_Categories_display_content">
 				<img src="img/optimized/adhesivos.png" alt="Categorias" class="container_Categories_display_Content_IO">
-				<a href="" class="container_Categories_display_Content_IO_Titles">Adhesivos</a>
+				<a href="pages categories/html/papeleria.html" class="container_Categories_display_Content_IO_Titles">Adhesivos</a>
 			</span>
 
 			<span class="container_Categories_display_content">
 				<img src="img/optimized/oficina.png" alt="Categorias" class="container_Categories_display_Content_IO">
-				<a href="" class="container_Categories_display_Content_IO_Titles">Oficina</a>
+				<a href="pages categories/html/papeleria.html" class="container_Categories_display_Content_IO_Titles">Oficina</a>
 			</span>
 
 			<span class="container_Categories_display_content">
 				<img src="img/optimized/decoracion.png" alt="Categorias" class="container_Categories_display_Content_IO">
-				<a href="" class="container_Categories_display_Content_IO_Titles">Fiesta</a>
+				<a href="pages categories/html/papeleria.html" class="container_Categories_display_Content_IO_Titles">Fiesta</a>
 			</span>
 
 			<span class="container_Categories_display_content">
 				<img src="img/optimized/servicios.png" alt="Categorias" class="container_Categories_display_Content_IO">
-				<a href="" class="container_Categories_display_Content_IO_Titles">Servicios</a>
+				<a href="pages categories/html/papeleria.html" class="container_Categories_display_Content_IO_Titles">Servicios</a>
 			</span>
 
 
 		</div>
 	</section>
-
-
-	
-	<script src="js/main.js"></script>
+<script src="js/script.js"></script>
 </body>
 </html>
