--- a/index.html
+++ b/index.html
@@ -41,7 +41,7 @@
 
 			<div class="container_Categories_display_content">
 				<img src="img/icon/papeleriaw.png" alt="Categorias" class="container_Categories_display_Content_IO">
-				<a href="" class="container_Categories_display_Content_IO_Titles">Papeleria</a>
+				<a href="papeleria.html" class="container_Categories_display_Content_IO_Titles">Papeleria</a>
 			</div>
 
 			<div class="container_Categories_display_content">
